--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -4,5 +4,5 @@
   "monthEndAutoCharge": true,
   "devicePlatform": "ios",
   "coinAddPriority": 1,
-  "userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Safari/605.1.15"
+  "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.67 Safari/537.36 Edg/87.0.664.52"
 }
